--- a/index.html
+++ b/index.html
@@ -8,7 +8,116 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <main></main>
+    <header>
+      <img src="./assets/img/Logo.svg" alt="logo">
+      <ul>
+        <li>About</li>
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>Testimonials</li>
+        <li>Help</li>
+      </ul>
+      <ul>
+        <li>Sign In</li>
+        <li>Sign Up</li>
+      </ul>
+    </header>
+    <main>
+      <section class="firstFlex">
+        <section>
+          <h1>Want anything to be easy with LaslesVPN.</h1>
+          <p>Provide a network for all your needs with ease and fun using LaslesVPN discover interesting features from us.</p>
+          <button>Get Started</button>
+        </section>
+        <img src="./assets/img/Illustration 1.svg" alt="illustration">
+      </section>
+      <section class="secondFlex">
+        <article>
+          <img src="./assets/img/user.svg" alt="user">
+          <div>
+            <h2>90+</h2>
+            <p>Users</p>
+          </div>
+        </article>
+        <article>
+          <img src="./assets/img/location.svg" alt="location">
+          <div>
+            <h2>30+</h2>
+            <p>Locations</p>
+          </div>
+        </article>
+        <article>
+          <img src="./assets/img/Server.svg" alt="server">
+          <div>
+            <h2>50+</h2>
+            <p>Servers</p>
+          </div>
+        </article>
+      </section>
+      <section class="thirdFlex">
+        <img src="./assets/img/Illustration 2.svg" alt="illustration2">
+        <article>
+          <h2>We Provide Many Features You Can Use</h2>
+          <p>You can explore the features that we provide with fun and have their own functions each feature.</p>
+          <ul>
+            <li><img src="./assets/img/check.png" alt="check">Powerfull online protection.</li>
+            <li><img src="./assets/img/check.png" alt="check">Internet without borders.</li>
+            <li><img src="./assets/img/check.png" alt="check">Supercharged VPN</li>
+            <li><img src="./assets/img/check.png" alt="check">No specific time limits.</li>
+          </ul>
+        </article>
+      </section>
+      <section class="fourthFlex">
+        <h2>Choose Your Plan</h2>
+        <p>Let's choose the package that is best for you and explore it happily and cheerfully.</p>
+        <article>
+          <section>
+            <img src="./assets/img/Free.png" alt="free">
+            <h3>Free Plan</h3>
+            <ul>
+              <li><img src="./assets/img/check2.png" alt="check2">Unlimited Bandwith</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Encrypted Connection</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Works on All Devices</li>
+              <li><img src="./assets/img/check2.png" alt="check2">No Traffic Logs</li>
+            </ul>
+            <h3>Free</h3>
+            <button>Select</button>
+          </section>
+          <section>
+            <img src="./assets/img/Standard.png" alt="standard">
+            <h3>Standard Plan</h3>
+            <ul>
+              <li><img src="./assets/img/check2.png" alt="check2">Unlimited Bandwith</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Encrypted Connection</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Works on All Devices</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Yes Traffic Logs</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Connect Anywhere</li>
+            </ul>
+            <h3>$9<span>/ mo</span></h3>
+            <button>Select</button>
+          </section>
+          <section>
+            <img src="./assets/img/Premium.png" alt="premium">
+            <h3>Premium Plan</h3>
+            <ul>
+              <li><img src="./assets/img/check2.png" alt="check2">Unlimited Bandwith</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Encrypted Connection</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Works on All Devices</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Yes Traffic Logs</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Connect Anywhere</li>
+              <li><img src="./assets/img/check2.png" alt="check2">Get New Features</li>
+            </ul>
+            <h3>$12<span>/ mo</span></h3>
+            <button>Select</button>
+          </section>
+        </article>
+      </section>
+      <section class="fifthSection">
+        <h2>Huge Global Network of Fast VPN</h2>
+        <p>See LaslesVPN everywhere to make it easier for you when you move locations.</p>
+        <img src="./assets/img/Huge Global.png" alt="worldmap">
+      </section>
+    </main>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
